# be-chat

./: .gitignore  Dockerfile  Makefile  docker-compose.dev.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6e338e86a591_create_initial_tables.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/routes/: api.py  room_routes.py  upload_routes.py  user_route.py  user_routes.py
app/schema/: base_schema.py  message_schema.py  room_schema.py  user_schema.py
app/services/: room_service.py  upload_service.py  user_service.py
